# docker-rest-api

./: Dockerfile  README.md  containers.py  k8s-pod.yaml  pyproject.toml  server.py  skaffold.yaml  swagger.yml
templates/: home.html
